get_ready_for_production
